tests/neg/annot-printing.check
-- [E007] Type Mismatch Error: tests/neg/annot-printing.scala:5:46 -----------------------------------------------------
5 |def x: Int @nowarn @main @Foo @Bar("hello") = "abc" // error
  |                                              ^^^^^
  |                                              Found:    ("abc" : String)
  |                                              Required: Int @nowarn() @main @Foo @Bar("hello")
  |
  | longer explanation available when compiling with `-explain`
